kubernetes/keycloak/keycloak.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:19.0.1
        args: ["start"]
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /realms/master
            port: 8080
      - image: us.gcr.io/cloudsql-docker/gce-proxy:1.32.0-alpine
        name: cloudsql-proxy
        command: [ "/cloud_sql_proxy",
                   "-instances=excellent-zoo-300106:us-central1:ipno-database-production=tcp:5432",
                   "-verbose=false" ]
      serviceAccountName: keycloak-ksa
